; ModuleID = '/home/carl/AnghaBench/php-src/ext/gd/libgd/extr_gd_gd.c_gdImageGdPtr.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/gd/libgd/extr_gd_gd.c_gdImageGdPtr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32 (%struct.TYPE_6__*)* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @gdImageGdPtr(i32 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.TYPE_6__*, align 8
  store i32 %0, i32* %3, align 4
  store i32* %1, i32** %4, align 8
  %7 = call %struct.TYPE_6__* @gdNewDynamicCtx(i32 2048, i32* null)
  store %struct.TYPE_6__* %7, %struct.TYPE_6__** %6, align 8
  %8 = load i32, i32* %3, align 4
  %9 = load %struct.TYPE_6__*, %struct.TYPE_6__** %6, align 8
  %10 = call i32 @_gdImageGd(i32 %8, %struct.TYPE_6__* %9)
  %11 = load %struct.TYPE_6__*, %struct.TYPE_6__** %6, align 8
  %12 = load i32*, i32** %4, align 8
  %13 = call i8* @gdDPExtractData(%struct.TYPE_6__* %11, i32* %12)
  store i8* %13, i8** %5, align 8
  %14 = load %struct.TYPE_6__*, %struct.TYPE_6__** %6, align 8
  %15 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %14, i32 0, i32 0
  %16 = load i32 (%struct.TYPE_6__*)*, i32 (%struct.TYPE_6__*)** %15, align 8
  %17 = load %struct.TYPE_6__*, %struct.TYPE_6__** %6, align 8
  %18 = call i32 %16(%struct.TYPE_6__* %17)
  %19 = load i8*, i8** %5, align 8
  ret i8* %19
}

declare dso_local %struct.TYPE_6__* @gdNewDynamicCtx(i32, i32*) #1

declare dso_local i32 @_gdImageGd(i32, %struct.TYPE_6__*) #1

declare dso_local i8* @gdDPExtractData(%struct.TYPE_6__*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
